began the ardous process of moving the working parts of the application to the new base. gotta rewrite a bit of code, and fix layout issues

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -50,10 +50,6 @@ table {
 .solid {
   background: #e6ebea; }
 
-.striped {
-  background-image: url("/images/stripe.png");
-  background-repeat: repeat; }
-
 /* #Mixins
 ==================================================*/
 /* #Basic Styles
@@ -194,6 +190,71 @@ body {
   float: right;
   position: relative;
   bottom: 310px; }
+
+.page_content {
+  width: 960px;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -45px;
+  /* the bottom margin is the negative value of the footer's height */
+  background: white;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  padding: 10px 20px 0 20px; }
+
+ul#social-icons li {
+  display: block;
+  float: left; }
+
+.spacer {
+  margin: 10px 0;
+  font-size: 16px;
+  font-style: italic; }
+
+.forgot-password {
+  margin-top: 10px;
+  clear: both; }
+
+.site-title {
+  font-size: 50px;
+  font-weight: bold;
+  margin: 20px 0 60px 0; }
+
+div.notice, div.alert {
+  padding: 20px 20px;
+  width: 600px;
+  font-size: 20px;
+  text-align: center;
+  margin: 10px auto;
+  color: black; }
+
+div.notice {
+  background-color: aliceblue; }
+
+div.alert {
+  background-color: lightsalmon; }
+
+div.share_text {
+  float: left;
+  margin: 0 0 0 10px;
+  width: 600px; }
+
+div.sharing {
+  padding-bottom: 40px;
+  overflow: hidden; }
+
+.share_image {
+  float: left; }
+
+div.sharing_form {
+  background-color: #eee;
+  padding: 15px;
+  margin: 25px 0; }
+
+.sharing_signup_call_to_action {
+  padding: 50px 0;
+  font-size: 28px; }
 
 /* #Typography
 ================================================== */
