--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -1,4 +1,4 @@
-/* forms */
+/* forms
 form {
     margin: 10px 0;
     display: block;
@@ -44,7 +44,7 @@ input[tupe=submit] {
 }
 
 label {
-    display: inline; /* IE hack */
+    display: inline;
     float: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
@@ -98,7 +98,7 @@ label abbr {
 }
 
 .field_with_errors > span {
-    display: inline; /* IE hack */
+    display: inline;
     float: left;
     color: #ee3333;
     white-space: nowrap;
@@ -140,4 +140,4 @@ label[for=user_remember_me] {
     font-size: 24px;
     width: 200px;
     text-align: center;
-}
+}*/
